Created Student model
