# app/Http/Controllers/StudentController.php
@@ -15,13 +15,13 @@ class StudentController extends Controller
      *     tags={"student"},
      *     produces={"application/json"},
      *     @SWG\Parameter(
-     *         description="NSID of the student to return",
+     *         description="NSID of the student to return (ex: ABC-123-000)",
      *         in="path",
      *         name="nsid",
      *         required=true,
      *         type="string",
      *     ),
-     *     @SWG\Response(response=200, description="Student found"),
+     *     @SWG\Response(response=200, description="Student found", @SWG\Schema(ref="#/definitions/Student")),
      *     @SWG\Response(response=400, description="Invalid NSID provided"),
      *     @SWG\Response(response=404, description="Student not found"),
      *     @SWG\Response(response=500, description="Internal server error"),
