# storage/api-docs/api-docs.json
@@ -33,14 +33,17 @@
                     {
                         "name": "nsid",
                         "in": "path",
-                        "description": "NSID of the student to return",
+                        "description": "NSID of the student to return (ex: ABC-123-000)",
                         "required": true,
                         "type": "string"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Student found"
+                        "description": "Student found",
+                        "schema": {
+                            "$ref": "#/definitions/Student"
+                        }
                     },
                     "400": {
                         "description": "Invalid NSID provided"
@@ -60,5 +63,61 @@
             }
         }
     },
-    "definitions": {}
+    "definitions": {
+        "Student": {
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "nsid": {
+                    "type": "string",
+                    "example": "ABC-123-000"
+                },
+                "school": {
+                    "type": "string",
+                    "example": "Example School, Area."
+                },
+                "censusNo": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "00000"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "John Smith"
+                },
+                "admissionNo": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": "00000"
+                },
+                "dob": {
+                    "type": "string",
+                    "format": "date",
+                    "example": "2000-01-15"
+                },
+                "mothersName": {
+                    "type": "string",
+                    "example": "Jane Doe"
+                },
+                "mothersNIC": {
+                    "type": "string",
+                    "example": "123456789 V"
+                },
+                "fathersName": {
+                    "type": "string",
+                    "example": "John Doe"
+                },
+                "fathersNIC": {
+                    "type": "string",
+                    "example": "123456789 V"
+                },
+                "guardiansName": {
+                    "type": "string",
+                    "example": "Legal Guardian's name - If any"
+                }
+            },
+            "type": "object"
+        }
+    }
 }
